feat: Update dependencies in pom.xml and add initial database schema